the gopkg.in/yml.v2 should be in the toml.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,6 +25,10 @@
 #   unused-packages = true
 
 
+[[constraint]]
+  name = "gopkg.in/yaml.v2"
+  version = "2.2.1"
+
 [prune]
   go-tests = true
   unused-packages = true
