the schema which added more configs.

--- a/spec/deploy-deprecated.yml
+++ b/spec/deploy-deprecated.yml
@@ -6,7 +6,7 @@ databases:
     origin_database: asd
     origin_username: asd
     origin_password: asd
-    env_var_host: asd
+    env_var_host: asd # should think about one way to embemd into the new spec.yml.
     env_var_database: asd
     env_var_username: asd
     env_var_password: asd
