--- a/spec/spec.yml
+++ b/spec/spec.yml
@@ -29,8 +29,10 @@ vm_groups:
         - storage_account: storage_account_1
           name: azure_file_1
           mount_point: /mnt/azurefile_1
-    network:
-      - name: network1
+    subnet: 
+      name: snet-1
+    load_balancer: 
+      name: load_balancer_1
     security_groups:
       - name: security_group_1
     roles:
@@ -47,10 +49,10 @@ vm_groups:
     data_disks:
       - size: 102400
       # name_convension: uuid   
-    networks:
-      - name: network1
-        load_balancer: load_balancer_1
-      - name: network2
+    subnet: 
+      name: snet-1
+    load_balancer: 
+      name: load_balancer_1
     roles: # this is used to generate the deployment scripts
       - name: builtin/php
         tags: ["foo"]
@@ -67,7 +69,7 @@ networks:
   - name: network1
     vnet: vnet-1
     subnets:
-      - name: 
+      - name: snet-1
         range: 10.10.0.0/24
         gateway: 10.10.0.1
 
@@ -75,26 +77,25 @@ load_balancers:
   - name: load_balancer_1
     sku: Standard
 
-services:
-  storage_accounts:
-    - name: storage_account_1
-      location: eastus
-      sku: standard
-    # this is only for the service based database, if you want to deploy the iaas version.
-    # please use the roles instead.
-  databases:
-    - migrate_from: # indicate where we should migrate from.
-        origin_host: asd
-        origin_database: asd
-        origin_username: asd
-        origin_password: asd
-      engine: mysql
-      engine_version: "5.7"
-      cores: 2
-      storage: 5
-      backup_retention_days: 35
-      username: "binxi"
-      password: "abcd1234!"
+storage_accounts:
+  - name: storage_account_1
+    location: eastus
+    sku: standard
+  # this is only for the service based database, if you want to deploy the iaas version.
+  # please use the roles instead.
+databases:
+  - migrate_from: # indicate where we should migrate from.
+      origin_host: asd
+      origin_database: asd
+      origin_username: asd
+      origin_password: asd
+    engine: mysql
+    engine_version: "5.7"
+    cores: 2
+    storage: 5
+    backup_retention_days: 35
+    username: "binxi"
+    password: "abcd1234!"
 
 
 
