--- a/spec/samples/large_lamp.yml
+++ b/spec/samples/large_lamp.yml
@@ -22,8 +22,9 @@ vm_groups:
         size: 10240
       data_disks:
         - size: 102400
-    subnet: 
-      name: snet-1
+    networks:
+      subnet: 
+        name: snet-1
     security_groups:
       - name: security_group_1
     roles:
@@ -38,10 +39,11 @@ vm_groups:
     data_disks:
       - size: 102400
       # name_convension: uuid   
-    subnet: 
-      name: snet-1
-    load_balancer: 
-      name: load_balancer_1
+    networks:
+      subnet: 
+        name: snet-1
+      load_balancer: 
+        name: load_balancer_1
     roles: # this is used to generate the deployment scripts
       - name: builtin/lamp_web_role
   
@@ -54,10 +56,11 @@ vm_groups:
     data_disks:
       - size: 102400
       # name_convension: uuid   
-    subnet: 
-      name: snet-1
-    load_balancer: 
-      name: load_balancer_1
+    networks:
+      subnet: 
+        name: snet-1
+      load_balancer: 
+        name: load_balancer_1
     roles: # this is used to generate the deployment scripts
       - name: builtin/gluster_server_node
 
@@ -70,16 +73,16 @@ vm_groups:
     data_disks:
       - size: 102400
       # name_convension: uuid   
-    subnet: 
-      name: snet-1
-    load_balancer: 
-      name: load_balancer_1
+    networks:
+      subnet: 
+        name: snet-1
+      load_balancer: 
+        name: load_balancer_1
     roles: # this is used to generate the deployment scripts
       - name: builtin/redis_server
 
-networks:
-  - name: network1
-    vnet: vnet-1
+vnets:
+  - name: vnet-1
     subnets:
       - name: snet-1
         range: 10.0.0.0/16
