Change the defination of network (#8)
* Change the defination of network

* Change the defination of networks

* Apply code review

--- a/spec/samples/large_lamp.yml
+++ b/spec/samples/large_lamp.yml
@@ -23,7 +23,7 @@ vm_groups:
       data_disks:
         - size: 102400
     network:
-      - name: network1
+      subnet_name: snet-1
     security_groups:
       - name: security_group_1
     roles:
@@ -38,9 +38,9 @@ vm_groups:
     data_disks:
       - size: 102400
       # name_convension: uuid   
-    networks:
-      - name: network1
-        load_balancer: load_balancer_1
+    network:
+      subnet_name: snet-1
+      load_balancer_name: load_balancer_1
     roles: # this is used to generate the deployment scripts
       - name: builtin/lamp_web_role
   
@@ -53,9 +53,9 @@ vm_groups:
     data_disks:
       - size: 102400
       # name_convension: uuid   
-    networks:
-      - name: network1
-        load_balancer: load_balancer_1
+    network:
+      subnet_name: snet-1
+      load_balancer_name: load_balancer_1
     roles: # this is used to generate the deployment scripts
       - name: builtin/gluster_server_node
 
@@ -68,17 +68,16 @@ vm_groups:
     data_disks:
       - size: 102400
       # name_convension: uuid   
-    networks:
-      - name: network1
-        load_balancer: load_balancer_1
+    network:
+      subnet_name: snet-1
+      load_balancer_name: load_balancer_1
     roles: # this is used to generate the deployment scripts
       - name: builtin/redis_server
 
-networks:
-  - name: network1
-    vnet: vnet-1
+vnets:
+  - name: vnet-1
     subnets:
-      - name: 
+      - name: snet-1
         range: 10.0.0.0/16
         gateway: 10.0.0.1
 
@@ -99,6 +98,3 @@ databases:
     backup_retention_days: 35
     username: "kl"
     password: "abcd1234!"
-
-
-
