make the networks an array in the sample manifest.

--- a/spec/samples/large_lamp.yml
+++ b/spec/samples/large_lamp.yml
@@ -22,8 +22,8 @@ vm_groups:
         size: 10240
       data_disks:
         - size: 102400
-    network:
-      subnet_name: snet-1
+    networks:
+      - subnet_name: snet-1
     security_groups:
       - name: security_group_1
     roles:
@@ -38,9 +38,9 @@ vm_groups:
     data_disks:
       - size: 102400
       # name_convension: uuid   
-    network:
-      subnet_name: snet-1
-      load_balancer_name: load_balancer_1
+    networks:
+      - subnet_name: snet-1
+        load_balancer_name: load_balancer_1
     roles: # this is used to generate the deployment scripts
       - name: builtin/lamp_web_role
   
@@ -53,9 +53,9 @@ vm_groups:
     data_disks:
       - size: 102400
       # name_convension: uuid   
-    network:
-      subnet_name: snet-1
-      load_balancer_name: load_balancer_1
+    networks:
+      - subnet_name: snet-1
+        load_balancer_name: load_balancer_1
     roles: # this is used to generate the deployment scripts
       - name: builtin/gluster_server_node
 
@@ -68,9 +68,9 @@ vm_groups:
     data_disks:
       - size: 102400
       # name_convension: uuid   
-    network:
-      subnet_name: snet-1
-      load_balancer_name: load_balancer_1
+    networks:
+      - subnet_name: snet-1
+        load_balancer_name: load_balancer_1
     roles: # this is used to generate the deployment scripts
       - name: builtin/redis_server
 
