--- a/spec/spec.yml
+++ b/spec/spec.yml
@@ -35,6 +35,8 @@ vm_groups:
         network_security_group_name: security_group_1
         outputs:
           - ip: 192.168.0.3
+            public_ip: 202.120.40.101
+            host: bananastick.southeast.azure.com
     roles:
       - name: builtin/jumpbox
         vars:
