--- a/spec/spec.yml
+++ b/spec/spec.yml
@@ -10,7 +10,7 @@ platform:
 vm_groups:
   - name: jumpbox
     meta:
-      jumpbox: true
+      group_type: jumpbox
     count: 1
     sku: Standard_DS1_v1
     type: vm # this can be vm or vmss
