--- a/spec/samples/large_lamp.yml
+++ b/spec/samples/large_lamp.yml
@@ -66,6 +66,8 @@ vm_groups:
     networks:
       - subnet_name: snet-1
         load_balancer_name: load_balancer_1
+        load_balancer_backend_address_pool_name: backend_address_pool_1
+
     roles: # this is used to generate the deployment scripts
       - name: builtin/lamp_web_role
   
@@ -86,6 +88,8 @@ vm_groups:
     networks:
       - subnet_name: snet-1
         load_balancer_name: load_balancer_1
+        load_balancer_backend_address_pool_name: backend_address_pool_1
+
     roles: # this is used to generate the deployment scripts
       - name: builtin/gluster_server_node
 
@@ -106,6 +110,7 @@ vm_groups:
     networks:
       - subnet_name: snet-1
         load_balancer_name: load_balancer_1
+        load_balancer_backend_address_pool_name: backend_address_pool_1
     roles: # this is used to generate the deployment scripts
       - name: builtin/redis_server
 
@@ -119,6 +124,23 @@ vnets:
 load_balancers:
   - name: load_balancer_1
     sku: Standard
+    backend_address_pools:
+      - name: backend_address_pool_1
+    health_probes:
+      - name: http_probe
+        protocol: Http # optional values: [Tcp, Http, Https]
+        port: 80
+        request_path: "/" # required if protocol is set to Http or Https. Otherwise, it is not allowed.
+      - name: ssh_probe
+        protocol: Tcp
+        port: 22
+    rules:
+      - name: http_rule
+        protocol: Tcp # optional values: [Tcp, Udp, All]
+        frontend_port: 80
+        backend_port: 80
+        backend_address_pool_name: backend_address_pool_1
+        health_probe_name: http_probe
 
 databases:
   - migrate_from: # indicate where we should migrate from.
