--- a/spec/samples/large_lamp.yml
+++ b/spec/samples/large_lamp.yml
@@ -142,16 +142,17 @@ load_balancers:
         backend_address_pool_name: backend_address_pool_1
         health_probe_name: http_probe
 
-databases:
+mysql_databases:
   - migrate_from: # indicate where we should migrate from.
       origin_host: asd
       origin_database: asd
       origin_username: asd
       origin_password: asd
-    engine: mysql
-    engine_version: "5.7"
+    version: "5.7"
     cores: 2
-    storage: 5
+    tier: GeneralPurpose # Possible values: ["Basic", "GeneralPurpose", "MemoryOptimized"]
+    family: Gen5 # Possible values: ["Gen4", "Gen5"]
+    storage: 5 # storage in GB, optional values from 5 to 4096
     backup_retention_days: 35
-    username: "kl"
+    username: "kunlunuser"
     password: "abcd1234!"
