--- a/spec/samples/large_lamp.yml
+++ b/spec/samples/large_lamp.yml
@@ -11,7 +11,7 @@ vm_groups:
   - name: jumpbox
     count: 1
     sku: Standard_B1s
-    type: vm
+    type: vm # this can be vm or vmss, currently only vm is supported
     os_profile:
       admin_name: kunlun
       linux_configuration:
@@ -41,7 +41,7 @@ vm_groups:
         outputs:
           - ip: 192.168.0.3
             public_ip: 202.120.40.101
-            host: bananastick.southeast.azure.com	
+            host: bananastick.southeast.azure.com
     roles:
       - name: builtin/jumpbox
         vars:
@@ -50,7 +50,7 @@ vm_groups:
   - name: web-servers
     count: 3
     sku: Standard_B1s
-    type: vmss # this can be vm or vmss
+    type: vm 
     os_profile:
       admin_name: kunlun
       linux_configuration:
