--- a/spec/spec.yml
+++ b/spec/spec.yml
@@ -16,7 +16,7 @@ vm_groups:
       group_type: jumpbox
     count: 1
     sku: Standard_DS1_v1
-    type: vm # this can be vm or vmss
+    type: vm # this can be vm or vmss, currently only vm is supported
     os_profile:
       admin_name: kunlun
       linux_configuration:
@@ -62,7 +62,7 @@ vm_groups:
     meta:
     count: 2
     sku: Standard_D2_v3
-    type: vm # this can be vm or vmss
+    type: vm 
     storage:
       os_disk:
         size: 10240
