--- a/pkg/apis/builtinmanifests/manifests/small_php.yml
+++ b/pkg/apis/builtinmanifests/manifests/small_php.yml
@@ -129,6 +129,30 @@ network_security_groups:
         source_address_prefix: "*"
         destination_address_prefix: "*"
 
+storage_accounts:
+  - name: storage_account_1
+    location: eastus
+    sku: standard
+
+# this is only for the service based database, if you want to deploy the iaas version.
+# please use the roles instead.
+mysql_databases:
+  - migrate_from: # indicate where we should migrate from.
+      origin_host: asd
+      origin_database: asd
+      origin_username: asd
+      origin_password: asd
+    name: "kunlun-mysql"
+    version: "5.7"
+    cores: 2
+    tier: GeneralPurpose # Possible values: ["Basic", "GeneralPurpose", "MemoryOptimized"]
+    family: Gen5 # Possible values: ["Gen4", "Gen5"]
+    storage: 5 # storage in GB, optional values from 5 to 4096
+    backup_retention_days: 35
+    ssl_enforcement: Enabled # Possible values: ["Enabled", "Disabled"]
+    username: "kunlunuser"
+    password: "abcd1234!"
+
 variables:
   - name: admin_ssh
     type: ssh
