--- a/spec/spec.yml
+++ b/spec/spec.yml
@@ -96,6 +96,7 @@ vm_groups:
 
 vnets:
   - name: vnet-1
+    address_space: 10.0.0.0/16
     subnets:
       - name: snet-1
         range: 10.10.0.0/24
