--- a/pkg/apis/builtinmanifests/manifests/medium_php.yml
+++ b/pkg/apis/builtinmanifests/manifests/medium_php.yml
@@ -2,8 +2,8 @@
 schema: v0.1
 
 env_name: kunlun
-resource_group_name: mykunlun
-location: eastus
+resource_group_name: ((resource_group_name))
+location: ((location))
 
 iaas: azure # this can be azure or some other platform
 
@@ -15,7 +15,7 @@ vm_groups:
     sku: Standard_B1s
     type: vm # this can be vm or vmss, currently only vm is supported
     os_profile:
-      admin_name: kunlun
+      admin_name: ((admin_name))
       linux_configuration:
         ssh:
           public_keys:
@@ -46,7 +46,7 @@ vm_groups:
     sku: Standard_B1s
     type: vm
     os_profile:
-      admin_name: kunlun
+      admin_name: ((admin_name))
       linux_configuration:
         ssh:
           public_keys:
