--- a/pkg/apis/builtinmanifests/manifests/small_php.yml
+++ b/pkg/apis/builtinmanifests/manifests/small_php.yml
@@ -2,8 +2,8 @@
 schema: v0.1
 
 env_name: kunlun
-resource_group_name: mykunlun
-location: eastus
+resource_group_name: ((resource_group_name))
+location: ((location))
 
 iaas: azure # this can be azure or some other platform
 
@@ -16,7 +16,7 @@ vm_groups:
     sku: Standard_B1s
     type: vm # this can be vm or vmss, currently only vm is supported
     os_profile:
-      admin_name: kunlun
+      admin_name: ((admin_name))
       linux_configuration:
         ssh:
           public_keys:
@@ -47,7 +47,7 @@ vm_groups:
     sku: Standard_B1s
     type: vm 
     os_profile:
-      admin_name: kunlun
+      admin_name: ((admin_name))
       linux_configuration:
         ssh:
           public_keys:
@@ -131,7 +131,7 @@ network_security_groups:
 
 storage_accounts:
   - name: storage_account_1
-    location: eastus
+    location: ((location))
     sku: standard
 
 # this is only for the service based database, if you want to deploy the iaas version.
