--- a/pkg/apis/builtinmanifests/manifests/maximum_php.yml
+++ b/pkg/apis/builtinmanifests/manifests/maximum_php.yml
@@ -77,6 +77,9 @@ vm_groups:
     roles: # this is used to generate the deployment scripts
       - name: kunlun.datadisk
       - name: kunlun.deploysourcecode
+        vars:
+          project_source_code_path: (( project_source_code_path ))
+          project_git_revision: (( project_git_revision ))
       - name: kunlun.php
 
 vnets:
